# audiobook_splitter

./: Cargo.toml
src/: audio_processor.rs  main.rs  mp3_encoder.rs
