[package]
name = "audiobook_splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
symphonia = "0.5.4" # Asegúrate de verificar la última versión disponible.
lame = "0.1.3" # Para codificar a MP3. También verifica la última versión.
rustfft = "6.2.0" # Para análisis de frecuencias, si es necesario.
audiopus = { version = "0.3.0-rc.0", optional = true } # Opcional, en caso de que trabajes con Opus.

